Bug 1180610 - Handle EME plugin voucher disappearing after installation before restart. r=jw_wang, a=lmandel